@@ -1,0 +1,3 @@
+qpdf: removed attachment auto-1
+qpdf: removed attachment auto-Two
+qpdf: wrote file a.pdf
